terraform/vpc.tf
// vpc groups
// one for backend
// one for frontend
// one for database
// one for load balancer

resource "aws_vpc" "api" {
  cidr_block = "10.0.0.0/28"
}

resource "aws_vpc" "dashboard" {
  cidr_block = "10.0.0.0/28"
}


resource "aws_vpc" "client" {
  cidr_block = "10.0.0.0/28"
}

resource "aws_vpc" "database" {
  cidr_block = "10.0.0.0/28"
}

resource "aws_vpc" "loadbalancer" {
  cidr_block = "10.0.0.0/28"

}
